examples/test/testpolicy19424.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19424
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key1: value32
      key22: value15
      key13: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value26
          key5: value20
      podSelector:
        matchLabels:
          key48: value42
